cc_library(
    name = "io_errors",
    hdrs = ["ioerrors.h"],
    copts = [
        "--std=c++20",
    ],
    visibility = [
        "//visibility:public",
    ],
)

cc_library(
    name = "io",
    srcs = ["io.cc"],
    hdrs = ["io.h"],
    copts = [
        "--std=c++20",
    ],
    visibility = [
        "//visibility:public",
    ],
    deps = [
        ":io_errors",
        "//cc:exports",
        "//cc:tunnel_types",
    ],
)

cc_library(
    name = "socket",
    srcs = ["socket.cc"],
    hdrs = ["socket.h"],
    copts = [
        "--std=c++20",
    ],
    visibility = [
        "//visibility:public",
    ],
    deps = [
        ":io",
        "//cc:error",
        "//cc:result",
        "//proto:sandwich_cc_proto",
    ],
)
