# Generate document and zip output
genrule(
    name = "mdbook_html",
    srcs = ["src"],
    outs = ["guide_doc_html.zip"],
    cmd = """
    guide_doc_dir=$$(dirname $(SRCS));
    $(location @com_github_rust_lang_mdbook//:mdbook_bin) build $${guide_doc_dir} -d html;
    zip -r $(OUTS) $${guide_doc_dir}/html;
    """,
    tools = ["@com_github_rust_lang_mdbook//:mdbook_bin"],
)
