# Copyright (c) SandboxAQ. All rights reserved.
# SPDX-License-Identifier: AGPL-3.0-only

py_test(
    name = "test_examples",
    timeout = "short",
    srcs = [
        "test_examples.py",
    ],
    data = [
        "//testdata",
    ],
    main = "test_examples.py",
    tags = ["requires-network"],
    visibility = ["//:__subpackages__"],
    deps = [
        "//examples/python/echo_tls_server",
        "//examples/python/tls_client",
    ],
)
