# Copyright (c) SandboxAQ. All rights reserved.
# SPDX-License-Identifier: AGPL-3.0-only

load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "tunnel",
    srcs = [
        "tunnel.go",
    ],
    importpath = "github.com/sandbox-quantum/sandwich/go/tunnel",
    visibility = [
        "//examples/go:__subpackages__",
        "//go:__subpackages__",
    ],
    deps = [
        "//go:sandwich",
        "//go/c",
        "//go/errors",
        "//go/io",
        "//proto:sandwich_go_proto",
        "//proto/api/v1:api_go_proto",
        "@io_opentelemetry_go_otel_trace//:go_default_library",
        "@org_golang_google_protobuf//proto:go_default_library",
    ],
)
