load("@rules_proto//proto:defs.bzl", "proto_library")
load("@com_google_protobuf//:protobuf.bzl", "py_proto_library")

proto_library(
    name = "errors_proto",
    srcs = ["errors.proto"],
    visibility = ["//visibility:public"],
)

proto_library(
    name = "tunnel_proto",
    srcs = ["tunnel.proto"],
    visibility = ["//visibility:public"],
)

proto_library(
    name = "io_proto",
    srcs = ["io.proto"],
    visibility = ["//visibility:public"],
)

proto_library(
    name = "sandwich_proto",
    srcs = ["sandwich.proto"],
    visibility = [
        "//visibility:public",
    ],
    deps = [
        ":errors_proto",
        ":io_proto",
        ":tunnel_proto",
    ],
)

##################
# Python library #
##################

py_proto_library(
    name = "errors_python_proto",
    srcs = ["errors.proto"],
    visibility = ["//visibility:public"],
)

py_proto_library(
    name = "tunnel_python_proto",
    srcs = ["tunnel.proto"],
    visibility = ["//visibility:public"],
)

py_proto_library(
    name = "io_python_proto",
    srcs = ["io.proto"],
    visibility = ["//visibility:public"],
)

py_proto_library(
    name = "sandwich_python_proto",
    srcs = ["sandwich.proto"],
    visibility = ["//visibility:public"],
    deps = [
        ":errors_python_proto",
        ":io_python_proto",
        ":tunnel_python_proto",
    ],
)
