# Copyright (c) SandboxAQ. All rights reserved.
# SPDX-License-Identifier: AGPL-3.0-only

filegroup(
    name = "ffi",
    srcs = [
        "context.rs",
        "error.rs",
        "io/helpers.rs",
        "io/listener.rs",
        "io/mod.rs",
        "mod.rs",
        "support.rs",
    ],
    visibility = ["//rust:__subpackages__"],
)
