[package]
name = "bazelisk"
version = "0.1.0"
authors = ["thb-sb <thomas@sandboxaq.com>", "SandboxAQ"]
edition = '2018'

[lib]
name = "bazelisk"

[dependencies]
build_rust_proto = { path = "proto/", package = "bazelisk-proto" }
bytes = "1.4.0"
hex-literal = "0.4.1"
protobuf = "3.2.0"
reqwest = { version = "0.11.18", features = ["blocking"] }
sha2 = "0.10.7"
tempfile = "3.7.0"
